--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <label for="Pesan class="form-label">Pesan</label>
                 <textarea class="form-control" id="Pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-success">Kirim</button>
             </form>
           </div>
         </div>
