menambahkan link blogger dan perubahan di navbar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#About">About</a>
             <a class="nav-link" href="#Projects">Projects</a>
-            <a class="nav-link" href="#Contact">Contact </a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                source code
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="https://berbagi-programcpp.blogspot.com/"target="_blank">C++/CPP</a></li>
+                <li><a class="dropdown-item" href="https://berbagi-programcpp.blogspot.com/"target="_blank">JAVA</a></li>
+                <li><hr class="dropdown-divider"></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
           </div>
         </div>
       </div>
@@ -71,46 +84,22 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2>project pemrograman c++ & java </h2>
           </div>
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/projects/1.jpg" class="card-img-top" alt="..." />
+                <a href="https://berbagi-programcpp.blogspot.com/"target="_blank"><img src="img/projects/gambarc++.png" class="card-img-top" alt="..."/></a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">pemrograman bahasa c++</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/projects/2.jpg" class="card-img-top" alt="..." />
+                <a href="https://berbagi-programcpp.blogspot.com/"target="_blank"><img src="img/projects/java.jfif" class="card-img-top" alt="..." /></a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/projects/3.jpg" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/projects/4.jpg" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/projects/5.jpg" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">pemrograman bahasa java</p>
                 </div>
               </div>
             </div>
