--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <!-- MY css -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="img/projects/my icon tab.png">
 
 <!-- navbar -->
 <title>My portfolio | hasan</title>
@@ -38,7 +39,7 @@
                 <li><hr class="dropdown-divider"></li>
               </ul>
             </li>
-          </ul>
+            <a class="nav-link" href="#Contact">Contact Me</a>
           </div>
         </div>
       </div>
@@ -63,7 +64,7 @@
           </div>
           <div class="row justify-content-between fs-5 text-center">
             <div class="col-md-4">
-              <p>Saya adalah seorang mahasiswa S1 Teknik informatika semester2 IT-PLN</p>
+              <p>Saya adalah seorang mahasiswa</p>
             </div>
             <div class="col-md-4">
               <p>Saya adalah seorang junior web developer</p>
