--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#About">About</a>
-            <a class="nav-link" href="#Projects">Projects</a>
+            <a class="nav-link" href="#Projects">Bahasa pemrograman</a>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 source code
@@ -38,6 +38,7 @@
                 <li><a class="dropdown-item" href="https://berbagi-programcpp.blogspot.com/"target="_blank">JAVA</a></li>
                 <li><hr class="dropdown-divider"></li>
               </ul>
+            </li>
             <a class="nav-link" href="#Contact">Contact Me</a>
           </div>
         </div>
