update link java

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="https://berbagi-programcpp.blogspot.com/"target="_blank">C++/CPP</a></li>
-                <li><a class="dropdown-item" href="https://berbagi-programcpp.blogspot.com/"target="_blank">JAVA</a></li>
+                <li><a class="dropdown-item" href="https://berbagi-java.blogspot.com/"target="_blank">JAVA</a></li>
                 <li><hr class="dropdown-divider"></li>
               </ul>
             </li>
@@ -49,6 +49,7 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center">
       <h1 class="display-4">M Hasan Basri</h1>
+      <img src="img/1.jpg" alt="hasan basri" width="200" class="rounded-circle img thumbnail" />
       <p class="lead">collegestudent | web developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,170.7C384,171,480,117,576,90.7C672,64,768,64,864,90.7C960,117,1056,171,1152,176C1248,181,1344,139,1392,117.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
@@ -94,7 +95,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <a href="https://berbagi-programcpp.blogspot.com/"target="_blank"><img src="img/projects/java.jfif" class="card-img-top" alt="..." /></a>
+                <a href="https://berbagi-java.blogspot.com/"target="_blank"><img src="img/projects/java.jfif" class="card-img-top" alt="..." /></a>
                 <div class="card-body">
                   <p class="card-text">pemrograman bahasa java</p>
                 </div>
