--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
               <p>Saya adalah seorang mahasiswa</p>
             </div>
             <div class="col-md-4">
-              <p>junior web developer
-                <br>saya akan berbagi beberapa source code dari bahasa java dan c++</br>
-              </p>
+              <p>Junior web developer dan Saya akan berbagi beberapa source code dari bahasa java dan c++</p>
             </div>
           </div>
         </div>
